# moviedatadashboard

./: README.md
dbt/: .gitignore  main.py  pyproject.toml
dbt/moviedash/: dbt_project.yml
dbt/moviedash/models/dim/: dim_movies_with_tags.sql  dim_tags.sql  dim_users.sql
dbt/moviedash/models/fct/: fct_ratings.sql
dbt/moviedash/models/marts/: mart_animated_monthly.sql  mart_animated_summary.sql  mart_movie_metrics.sql
dbt/moviedash/models/staging/: src_links.sql  src_movies.sql  src_ratings.sql
infra/snowflake/: 001_warehouse.sql  002_database_and_schema.sql  003_roles.sql  004_users.sql  005_grants.sql
